--- a/wp-content/themes/inclusiva/assets/styles/layouts/_footer.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_footer.scss
@@ -21,7 +21,7 @@ footer{
 						text-align: center;
 						background-color: $white;
 						color: $green--accent;
-						width: 24px; 
+						width: 24px;
 						height: 100%;
 						span{
 							font-size: 12px;
@@ -37,7 +37,7 @@ footer{
 				}
 			}
 		}
-	} 
+	}
 	&.content-info{
 		padding-top: 30px;
 		padding-bottom: 30px;
@@ -60,10 +60,10 @@ footer{
 					padding: 0;
 					list-style-type: none;
 					li{
-						padding: 0  0 8px 0; 
+						padding: 0  0 8px 0;
 						a{
 							display: block;
-							padding: 0px; 
+							padding: 0px;
 							@include opensans(semibold);
 							font-size: 12px;
 						}
@@ -95,7 +95,7 @@ footer{
 		padding-top: 60px;
 		padding-bottom: 30px;
 		.container{
-			
+
 			.footer__logo{
 				&.minagri, &.peru{
 					a{
@@ -108,17 +108,17 @@ footer{
 				&.minagri{
 					float: left;
 					a{
-						width: 253px;
-						height: 46px;
+						width: 275px;
+						height: 50px;
 						background-image: url('../images/logo__minagri.png');
-					}	
+					}
 				}
 				&.peru{
 					float: right;
 					a{
-						width: 126px;
-						height: 46px;
-						background-image: url('../images/logo__peru--color.png');
+						width: 170px;
+						height: 50px;
+						background-image: url('../images/logo__peru.gif');
 					}
 				}
 			}
@@ -144,7 +144,7 @@ footer{
 							width: auto;
 							background-position: center;
 						}
-						margin-bottom: 20px;	
+						margin-bottom: 20px;
 					}
 					&.peru{
 						@include center-block();
@@ -158,7 +158,7 @@ footer{
 			}
 		}
 	}
-} 
+}
 @media(min-width: $screen-sm-min){}
 @media(max-width: $screen-sm-max){}
 @media(min-width: $screen-md-min){}
@@ -171,17 +171,17 @@ footer{
 					.owl-stage{
 						.owl-item{
 							img{
-								-webkit-filter: grayscale(100%); 
+								-webkit-filter: grayscale(100%);
 								-moz-filter: grayscale(100%);
-								filter: grayscale(100%); 
+								filter: grayscale(100%);
 								@include opacity(.85);
 							}
 							&:hover{
 								img{
 									-webkit-filter: grayscale(0);
 									-moz-filter: grayscale(0);
-									filter: grayscale(0); 
-									@include opacity(1); 
+									filter: grayscale(0);
+									@include opacity(1);
 								}
 							}
 						}
@@ -195,7 +195,7 @@ footer{
 						text-align: center;
 						background-color: $white;
 						color: $green--accent;
-						width: 24px; 
+						width: 24px;
 						height: 100%;
 						span{
 							font-size: 12px;
@@ -211,5 +211,5 @@ footer{
 				}
 			}
 		}
-	} 
-} 
+	}
+}
