--- a/wp-content/themes/inclusiva/assets/styles/common/_mixins.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_mixins.scss
@@ -30,8 +30,8 @@
     right: 0;
     height: 100%;
     z-index: 2;
-    opacity: 0.30;
-    background: -moz-linear-gradient(top, rgba(0,0,0,0.001) 0%, rgba(0,0,0,1) 100%); 
+    opacity: 0.5;
+    background: -moz-linear-gradient(top, rgba(0,0,0,0.001) 0%, rgba(0,0,0,1) 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.001)), color-stop(100%,rgba(0,0,0,1)));
     background: -webkit-linear-gradient(top, rgba(0,0,0,0.001) 0%,rgba(0,0,0,1) 100%);
     background: -o-linear-gradient(top, rgba(0,0,0,0.001) 0%,rgba(0,0,0,1) 100%);
@@ -43,10 +43,10 @@
 
 @mixin text-on-focus(){
   color: $white;
-    text-shadow: 1px 2px 2px rgba(0,0,0,.3);
+  text-shadow: 1px 2px 2px rgba(0,0,0,.3);
 }
 
-@mixin photo-credit( $photo: 'AGRO RURAL' ){ 
+@mixin photo-credit( $photo: 'AGRO RURAL' ){
   &:before{
     position: absolute;
     content: 'Foto: #{$photo}';
@@ -59,7 +59,7 @@
     @include opacity(.5);
   }
 }
- 
+
 @mixin title-xs($variant: 'light'){
   font-size: 10px;
     @include opensans( $variant );
@@ -194,7 +194,7 @@
     width: $width;
     height: $height;
     background-repeat: no-repeat;
-    
+
     span{
       position: relative;
       display: block;
@@ -217,7 +217,7 @@
 
 @mixin placeholder( $color : $gray ){
   @include opensans();
-  &::-webkit-input-placeholder { 
+  &::-webkit-input-placeholder {
     color:  $color;
   }
   &:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
@@ -245,8 +245,8 @@
   color: $color;
 }
 
-@mixin entry-title($titleVariant: 'default' ){
-  @include opensans();
+@mixin entry-title($titleVariant: 'default', $fontVariant: 'regular' ){
+  @include opensans($fontVariant);
     @if $titleVariant == 'default' {
       font-size: 20px;
       line-height: 24px;
@@ -260,7 +260,7 @@
       font-size: 14px;
       line-height: 18px;
     } @else {}
-  
+
   font-weight: normal;
 }
 
