--- a/wp-content/themes/inclusiva/assets/styles/layouts/_home.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_home.scss
@@ -52,7 +52,7 @@
 								@include border-radius(0);
 								@include opacity(.5);
 							}
-						}	
+						}
 					}
 					header{
 						h4{
@@ -77,7 +77,7 @@
 						}
 					}
 				}
-				
+
 					&:hover{
 						.page-header > h3 > small > a > i, span{
 							display: inline-block;
@@ -85,7 +85,7 @@
 					}
 			}
 
-			aside{			
+			aside{
 				&.eventos{
 					@include make-sm-column(3);
 					margin-bottom: 3px;
@@ -201,7 +201,7 @@
 		}
 
 		&.multimedia__banner{
-			background: $gray-lighter; 
+			background: $gray-lighter;
 			.multimedia{
 				@include make-lg-column(12);
 				.page-header{
@@ -217,7 +217,7 @@
 					.nav.nav-tabs{
 						@include make-lg-column(2);
 						@include make-sm-column(2);
-						@include make-xs-column(2); 
+						@include make-xs-column(2);
 						margin-right: 0;
 						border-right: 1px solid $gray;
 						padding-right: 0;
@@ -242,41 +242,44 @@
 						}
 					}
 					.tab-content{
-						@include make-lg-column(10); 
+						@include make-lg-column(10);
 						@include make-sm-column(10);
 						@include make-xs-column(10);
-						.tab-pane{		
-						padding-top: 20px;					
+						.tab-pane{
+						padding-top: 20px;
 							p{ color: $white; }
 
-							.multimedia--1{
-								@include make-lg-column(5);
-								@include make-xs-column(3); 
-								figure{ 
-									@include make-lg-column(12);
-									
+							.multimedia--1, .multimedia--2{
+								figure{
 									a{
-										.figure-thumb{
-											position: relative;
-											display: block;
-											.fa-stack {
-										    	position: absolute;
-										    	top: 50%;
-											    left: 50%;
-											    transform: translate(-50%, -50%);
-										    	.fa-stack-2x{
-										    		color: $black;
-										    	}
-										    }
-										}	
-									}
-									figcaption{
-										h3, time{
-											margin: 0;
-											color: $gray--light;
-											@include text-on-focus();
-											a{ color: $white; }
+										.media-img{
+											display: flex;
+											align-items: center;
+											justify-content: center;
+											height: 100%;
+												i{
+													position: absolute;
+													font-size: 24px;
+												}
 										}
+										text-shadow: none;
+										figcaption{
+											top: 100%;
+											h3{}
+											time{
+												@include meta-text();
+											}
+										}
+									}
+								}
+							}
+
+							.multimedia--1{
+								@include make-lg-column(5, 0);
+								@include make-xs-column(3, 0);
+								figure{
+									@include make-lg-column(12);
+									figcaption{
 										time{
 											@include meta-text();
 											color: $white;
@@ -285,26 +288,11 @@
 								}
 							}
 							.multimedia--2{
-								@include make-lg-column(7);
-								@include make-xs-column(9);
-								figure{ 
+								@include make-lg-column(7, 0);
+								@include make-xs-column(9, 0);
+								figure{
 									@include make-lg-column(4);
 									@include make-xs-column(4);
-									a{
-										.figure-thumb{
-											position: relative;
-											display: block;
-											.fa-stack {
-										    	position: absolute;
-										    	top: 50%;
-											    left: 50%;
-											    transform: translate(-50%, -50%);
-										    	.fa-stack-2x{
-										    		color: $black;
-										    	}
-										    }
-										}	
-									}
 									a{
 										.figure-thumb{
 											position: relative;
@@ -317,51 +305,6 @@
 												color: $white;
 												@include opensans(bold);
 											}
-										}
-									}
-									figcaption{
-										h3{
-											@include entry-title(xs);
-										}
-										h3, time{
-											margin: 0;
-											color: $gray--light;
-											a{ }
-										}
-										time{
-											@include meta-text();
-										}
-									}
-								}
-							}
-
-							.multimedia--1, .multimedia--2{
-								figure{
-									&:hover{
-										a.format-icon{
-										    .fa-stack {
-										    	.fa-stack-2x{
-										    		@include opacity(.5);
-										    		@include pulse();
-										    	}
-										    }
-										}
-									}
-								}
-							}
-
-							figure{
-								padding-left: 5px !important;
-								padding-right: 5px !important;
-							}
-							.multimedia--1, .multimedia--2{
-								padding-left: 0px !important;
-								padding-right: 0px !important;
-								figure{
-									a.format-icon{
-
-										i{
-
 										}
 									}
 								}
@@ -386,7 +329,7 @@
 							}
 						}
 					}
-				
+
 				}
 			}
 		}
@@ -398,12 +341,12 @@
 				.owl-item.active.center{
 					figure{
 						.banner__txt{
-							display:block; 
-							position: relative; 
+							display:block;
+							position: relative;
 							z-index: 3
 						}
 					}
-				}	
+				}
 			}
 		}
 		.owl-nav{
@@ -451,7 +394,7 @@
 									.sl__home__content{
 										p{
 											h3{
-												
+
 											}
 										}
 									}
@@ -466,7 +409,7 @@
 											}
 										}
 									}
-							} 
+							}
 						}
 
 						&.active{
@@ -480,7 +423,7 @@
 			} /* Owl Stage Outer Ends*/
 
 			.owl-nav{} /* Termina .owl-nav */
-			.owl-dots{ 
+			.owl-dots{
 				top: 15px !important;
 				left: inherit !important;
 				right: 10px;
@@ -489,101 +432,23 @@
 				}
 			} /* Termina .owl-dots */
 		} /* Termina .sl__home */
+		.multimedia--1, .multimedia--2{
+			figure{
+				figcaption{
+					display: none;
+				}
+			}
+		}
+
+
 	} /* Termina home*/
-
-	.multimedia--1{
-		figure{ 
-			a.format-icon{
-			    top: 20px;
-			    .fa-stack {
-			    	.fa-stack-2x{
-			    		@include opacity(0);
-			    	}
-				}
-			}
-			figcaption{
-				h3{ @include entry-title(xs); }
-			}
-		}
-	}
-	.multimedia--2{
-		figure{ 
-			a.format-icon{
-			    top: 20px;
-			    transform: translate(-50%, -20px);
-			    .fa-stack {
-			    	.fa-stack-2x{
-			    		@include opacity(0);
-			    	}
-			    }
-			}
-			figcaption{
-				h3{
-					@include entry-title(xs);
-				}
-			}
-		}
-	}
 }
 
-@media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
-	.multimedia--1{
-		figure{ 
-			a.format-icon{
-			    top: 30%;
-			    .fa-stack {
-			    	.fa-stack-2x{}
-				}
-			}
+@media (max-width: $screen-sm-max) {
+	.multimedia--1, .multimedia--2{
+		figure{
 			figcaption{
-				h3{ @include entry-title(xs); }
-			}
-		}
-	}
-	.multimedia--2{
-		figure{ 
-			a.format-icon{
-			    top: 30%;
-			    transform: translate(-30%, -30%);
-			    .fa-stack {
-			    	.fa-stack-2x{}
-			    }
-			}
-			figcaption{
-				h3{
-					@include entry-title(xs);
-				}
-			}
-		}
-	}
-}
-
-@media (min-width: $screen-md-min) and (max-width: $screen-md-max){
-	.multimedia--1{
-		figure{ 
-			a.format-icon{
-			    top: 50%;
-			    .fa-stack {
-			    	.fa-stack-2x{
-			    		@include opacity(.35);
-			    	}
-			    }
-			}
-			figcaption{
-				h3{ @include entry-title(md); }
-			}
-		}
-	}
-	.multimedia--2{
-		figure{ 
-			a.format-icon{
-			    top: 25%;
-			    transform: translate(-25%, -50%);
-			    .fa-stack {
-			    	.fa-stack-2x{
-			    		@include opacity(.35);
-			    	}
-			    }
+				display: none;
 			}
 		}
 	}
@@ -610,10 +475,10 @@
 									padding-right: 20px;
 									padding-top: 60px;
 									.sl__home__hashtag, .sl__home__title, .sl__home__content, .sl__home__link{
-										
+
 									}
 									.sl__home__hashtag{
-										a{	
+										a{
 											color: $white;
 											@include opensans(semibold);
 											text-transform: uppercase;
@@ -622,9 +487,9 @@
 									}
 									.sl__home__title{
 										h3{
-											text-transform: uppercase; 
+											text-transform: uppercase;
 											@include opensans();
-											color: $white;                                                                                                                                                                        
+											color: $white;
 											margin-top: 0px;
 											margin-bottom: 0;
 											padding-top: 7px;
@@ -645,11 +510,11 @@
 											padding-top: 10px;
 											padding-bottom: 20px;
 											a{
-												
+
 											}
 										}
 									}
-							} 
+							}
 						}
 
 						&.active{
@@ -665,11 +530,11 @@
 			.owl-nav{
 				.owl-prev, .owl-next{
 					position: absolute;
-					bottom: 15px;	
+					bottom: 15px;
 					text-align: center;
 					opacity: 1;
-					background-color: $green--accent; 
-					
+					background-color: $green--accent;
+
 					span{
 						font-size: 12px;
 						line-height: 23px;
@@ -683,7 +548,7 @@
 					span{}
 				}
 			} /* Termina .owl-nav */
-			.owl-dots{ 
+			.owl-dots{
 				position: absolute;
 				top: 30px;
 				left: 15px;
@@ -722,11 +587,28 @@
 			}
 		}
 	} /* Termina home*/
+
+	.multimedia--1, .multimedia--2{
+		figure{
+			a{
+				figcaption{
+					padding: 15px 0;
+					height: 100%;
+					h3{
+						color: $gray-dark;
+						font-size: 13px;
+						line-height: 18px;
+						text-shadow: none;
+					}
+				}
+			}
+		}
+	}
 }
 
 @media(min-width: $screen-lg-min){
 	.home{
-		.sl__home{ 
+		.sl__home{
 			width: 1140px;
 			margin: 0 auto;
 			.owl-stage-outer{
@@ -746,7 +628,7 @@
 							opacity: 0.15;
 							@include focus-shadow();
       						z-index: 0;
-							
+
 							img{
 								@include fadeInDown();
 							}
@@ -770,7 +652,7 @@
   									padding-right: 0px;
   									text-align: center;
   									text-transform: uppercase;
-  									a{	
+  									a{
   										@include opensans(bold);
   										width: auto;
   										background-color: transparent;
@@ -786,13 +668,13 @@
   								}
   								.sl__home__title{
   									h3{
-  										@include opensans(bold);                                                                                                                                                                  
+  										@include opensans(bold);
   										margin-top: 3px;
   										margin-bottom: 0;
   										padding-top: 15px;
   										padding-bottom: 10px;
   										font-size: 48px !important;
-  										text-align: center; 
+  										text-align: center;
   										a{
   											@include text-on-focus();
   											&:hover{}
@@ -821,7 +703,7 @@
   										text-align: center;
   									}
   								}
-							} 
+							}
 						}
 
 						&.active{
@@ -849,11 +731,11 @@
 			.owl-nav{
 				.owl-prev, .owl-next{
 					position: absolute;
-					top: 50%;	
+					top: 50%;
 					text-align: center;
 					@include border-radius(0);
 					opacity: 0;
-					background-color: $green--accent; 
+					background-color: $green--accent;
 					height:48px;
      				width:24px;
 					span{
@@ -862,7 +744,7 @@
 					}
 				}
 				.owl-prev{
-					
+
 				     border-radius: 0 48px 48px 0;
 				     -moz-border-radius: 0 48px 48px 0;
 				     -webkit-border-radius: 0 48px 48px 0;
@@ -890,7 +772,7 @@
 					span{}
 				}
 			} /* Termina .owl-nav */
-			.owl-dots{ 
+			.owl-dots{
 				position: absolute;
 				top: 30px;
 				right: 30px;
@@ -915,7 +797,7 @@
 					}
 				}
 			} /* Termina .owl-dots */
-		
+
 			&:hover{
 				.owl-nav{
 					.owl-prev{
@@ -927,7 +809,7 @@
 						animation-name: fadeInLeft;
 						opacity: 1;
 					}
-					.owl-next{ 
+					.owl-next{
 						-webkit-animation-duration: 1s;
 						animation-duration: 1s;
 						-webkit-animation-fill-mode: both;
@@ -942,51 +824,48 @@
 
 
 		.multimedia--1{
-			figure{ 
-				a.format-icon{
-			    top: 50%;
-			    transform: translate(-25%, -50%);
-				    .fa-stack {
-				    	.fa-stack-2x{
-				    		@include opacity(.35);
-				    	}
-				    }
-				}
-				figcaption{
-					position: absolute;
-					bottom: 0;
-					left: 5px;
-					right: 5px; 
-					padding: 15px;
-					 opacity: 0.8;
-					background: -moz-linear-gradient(top, rgba(0,0,0,0.001) 0%, rgba(0,0,0,1) 100%);
-					background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.001)), color-stop(100%,rgba(0,0,0,1)));
-					background: -webkit-linear-gradient(top, rgba(0,0,0,0.001) 0%,rgba(0,0,0,1) 100%);
-					background: -o-linear-gradient(top, rgba(0,0,0,0.001) 0%,rgba(0,0,0,1) 100%);
-					background: -ms-linear-gradient(top, rgba(0,0,0,0.001) 0%,rgba(0,0,0,1) 100%);
-					background: linear-gradient(to bottom, rgba(0,0,0,0.001) 0%,rgba(0,0,0,1) 100%);
-					filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 );
-					h3{
-						@include entry-title(sm);
+			figure{
+				a{
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					flex-direction: column;
+					height: 100%;
+					.media-img{
+						display: block;
+						align-items: center;
+						justify-content: center;
+						height: 100%;
+							i{
+								position: absolute;
+								font-size: 24px;
+							}
 					}
-					h3, time{
-						margin: 0;
-						color: $white;
-						a{ color: $white; }
+					figcaption{
+						position: absolute;
+						top: inherit !important;
+						bottom: 0;
+						padding: 15px;
+						@include focus-shadow();
+
+						h3{
+							@include text-on-focus();
+							@include entry-title(sm);
+						}
 					}
 				}
 			}
 		}
 		.multimedia--2{
-			figure{ 
-				a.format-icon{
-				    top: 25%;
-				    transform: translate(-25%, -50%);
-				    .fa-stack {
-				    	.fa-stack-2x{
-				    		@include opacity(.35);
-				    	}
-				    }
+			figure{
+				figcaption{
+					padding: 15px 0;
+					h3{
+						color: $gray-dark;
+						font-size: 13px;
+						line-height: 18px;
+						text-shadow: none;
+					}
 				}
 			}
 		}
