Convocatorias CAS mensaje

--- a/wp-content/themes/inclusiva/assets/styles/layouts/_home.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_home.scss
@@ -847,7 +847,7 @@
 						bottom: 0;
 						padding: 15px;
 						@include focus-shadow();
-
+						width: 100%;
 						h3{
 							@include text-on-focus();
 							@include entry-title(sm);
