--- a/wp-content/themes/inclusiva/assets/styles/layouts/_archives.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_archives.scss
@@ -295,7 +295,7 @@
 						bottom: 0;
 						padding: 15px;
 						@include focus-shadow();
-
+						width: 100%;
 						h3{
 							@include text-on-focus();
 							@include entry-title(sm);
